community-detection-mpi/Louvain-MPI/nbproject/private/Default-build.log.log
mpic++ -fopenmp -o graph_binary.o -c graph_binary.cpp -ansi -O5 -Wall
mpic++ -fopenmp -o community.o -c community.cpp -ansi -O5 -Wall
mpic++ -fopenmp -o community-main.o -c community-main.cpp -ansi -O5 -Wall
community-main.cpp: In function ‘std::vector<std::basic_string<char> > split(const string&, char)’:
community-main.cpp:41:26: error: too many arguments to function ‘std::vector<std::basic_string<char> > split(const string&, char)’
     split(s, delim, elems);
                          ^
community-main.cpp:39:26: note: declared here
 std::vector<std::string> split(const std::string &s, char delim) {
                          ^
community-main.cpp: In function ‘int main(int, char**)’:
community-main.cpp:137:32: error: no matching function for call to ‘std::basic_ifstream<char>::basic_ifstream(std::string&)’
     ifstream remoteFileStream(r);
                                ^
community-main.cpp:137:32: note: candidates are:
In file included from community-main.cpp:14:0:
/usr/include/c++/4.8/fstream:467:7: note: std::basic_ifstream<_CharT, _Traits>::basic_ifstream(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]
       basic_ifstream(const char* __s, ios_base::openmode __mode = ios_base::in)
       ^
/usr/include/c++/4.8/fstream:467:7: note:   no known conversion for argument 1 from ‘std::string {aka std::basic_string<char>}’ to ‘const char*’
/usr/include/c++/4.8/fstream:453:7: note: std::basic_ifstream<_CharT, _Traits>::basic_ifstream() [with _CharT = char; _Traits = std::char_traits<char>]
       basic_ifstream() : __istream_type(), _M_filebuf()
       ^
/usr/include/c++/4.8/fstream:453:7: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/4.8/fstream:427:11: note: std::basic_ifstream<char>::basic_ifstream(const std::basic_ifstream<char>&)
     class basic_ifstream : public basic_istream<_CharT, _Traits>
           ^
/usr/include/c++/4.8/fstream:427:11: note:   no known conversion for argument 1 from ‘std::string {aka std::basic_string<char>}’ to ‘const std::basic_ifstream<char>&’
community-main.cpp:150:33: error: cannot convert ‘std::string {aka std::basic_string<char>}’ to ‘const char*’ for argument ‘1’ to ‘int atoi(const char*)’
         int source = atoi(localV);
                                 ^
community-main.cpp:154:35: error: invalid conversion from ‘char’ to ‘const char*’ [-fpermissive]
         int sink = atoi(mapping[0]);
                                   ^
In file included from /usr/include/features.h:371:0,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/os_defines.h:39,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++config.h:426,
                 from /usr/include/c++/4.8/cstdlib:41,
                 from community-main.cpp:8:
/usr/include/stdlib.h:278:1: error:   initializing argument 1 of ‘int atoi(const char*)’ [-fpermissive]
 __NTH (atoi (const char *__nptr))
 ^
community-main.cpp:155:40: error: invalid conversion from ‘char’ to ‘const char*’ [-fpermissive]
         int partition = atoi(mapping[1]);
                                        ^
In file included from /usr/include/features.h:371:0,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/os_defines.h:39,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++config.h:426,
                 from /usr/include/c++/4.8/cstdlib:41,
                 from community-main.cpp:8:
/usr/include/stdlib.h:278:1: error:   initializing argument 1 of ‘int atoi(const char*)’ [-fpermissive]
 __NTH (atoi (const char *__nptr))
 ^
community-main.cpp:158:33: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         if (remoteMap.size() <= source) {
                                 ^
community-main.cpp:160:13: error: expected ‘;’ before ‘remoteMap’
             remoteMap.resize(source + 1, make_pair(-1, -1));
             ^
community-main.cpp:160:60: warning: statement has no effect [-Wunused-value]
             remoteMap.resize(source + 1, make_pair(-1, -1));
                                                            ^
community-main.cpp:138:9: warning: unused variable ‘remoteEdgeCount’ [-Wunused-variable]
     int remoteEdgeCount = 0;
         ^
make: *** [community-main.o] Error 1
